# llvm-rust

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  AUDIT_REPORT_2025-11-09.md  CLAUDE.md  COMPREHENSIVE_LEVEL_TRACKING.md  Cargo.toml  DEBUGGING_SUMMARY_2171.md  FINAL_COMPLETION_SUMMARY.md  FINAL_SESSION_SUMMARY.md  IMPLEMENTATION.md  INFRASTRUCTURE_ASSESSMENT.md  LEVEL1_SUMMARY.md  LEVEL2_COMPLETE_100PCT.md  LEVEL2_PROGRESS.md  LEVEL4_FINAL_REPORT.md  LEVEL4_VERIFIER_IMPLEMENTATION.md  LEVEL_7_8_9_STATUS.md  LEVEL_STATUS.md  PARSER_100_PERCENT_ACHIEVED.md  PARSER_100_PERCENT_STATUS.md  PROPOSED_PLAN.md  README.md  ROADMAP.md  SESSION_2025-11-09.md  SESSION_2025-11-09_98PCT.md  SESSION_COMPLETE_92PCT.md  SESSION_FINAL_96PCT.md  SESSION_PROGRESS.md  SESSION_SUMMARY.md  TEST_PASS_RATES.md  TIMEOUT_FIX.md  VERIFIER_TEST_ANALYSIS.md  analyze_failures.sh  analyze_negative_tests.sh  categorize_25.sh  categorize_31.sh  categorize_32.sh  count_test_categories.sh  debug_analysis_2171.md  (+38 more)
crates/llvm-core/: Cargo.toml
crates/llvm-core/src/: context.rs  lib.rs  metadata.rs  module.rs  types.rs  value.rs
docs/: 20251113-1143-foundational-parser-changes.md  20251113-2248-test-coverage-audit.md  20251114-0406-test-audit.md  level4_progress.md  plan.md  port-progress.md  remaining-test-failures.md  validation_rules.md  verification_status.md  verifier-implementation-plan.md  verifier-test-progress.md
examples/: simple_function.rs
scripts/: add_cc_parser.patch  categorize_failures.sh  categorize_negative_failures.sh  download-llvm-tests.sh  identify_failures.sh  list_passing_negatives.sh  quick_failure_check.sh  run_verifier_tests.sh  test_report.sh
src/: analysis.rs  attributes.rs  basic_block.rs  builder.rs  cfg.rs  context.rs  function.rs  instruction.rs  intrinsics.rs  (+13 more)
(+95 files in other folders)
