[package]
name = "llvm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core LLVM IR data structures and types in Rust"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
smallvec.workspace = true
rustc-hash.workspace = true
indexmap.workspace = true
bumpalo.workspace = true
parking_lot.workspace = true

[dev-dependencies]
proptest.workspace = true
